fix the truncating of text and adding tooltip including the edit from the data table
Reviewer: Tiff Go

Issue: GCp-8798

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -585,9 +585,7 @@ padding-left: 20px; margin-top: 7px
 .germplasm-measurement-list-table td input {
    font-size: 10px;
 }
-.variates{
-	min-width: 130px;
-	max-width: 130px;
+.variates{	
 }
 .factors{
 	background-color: #a4a4a4
